# agent-buddy

./: .gitignore  .gitmodules  README.md
my-agent-core/: .env.example  pyproject.toml
my-agent-core/src/agent_core/: __init__.py  plan_mode.py  sqlite_utils.py  types.py
my-agent-core/src/agent_core/adapters/: web.py
my-agent-core/src/agent_core/attachments/: __init__.py  store.py
my-agent-core/src/agent_core/billing/: store.py
my-agent-core/src/agent_core/buddy/: __init__.py  companion.py  observer.py  sprites.py  store.py  types.py
my-agent-core/src/agent_core/channel/: base.py  web_shell.py
my-agent-core/src/agent_core/context/: builder.py  compact.py  tokens.py
my-agent-core/src/agent_core/core/: agent.py  events.py
my-agent-core/src/agent_core/examples/: repl.py  smoke.py
my-agent-core/src/agent_core/hooks/: engine.py  executors.py  store.py  types.py
my-agent-core/src/agent_core/images/: __init__.py  base.py  (+2 more)
my-agent-core/src/agent_server/: __init__.py  admin.py  app.py  codex_credentials.py  model_providers.py  prompt_store.py  runtime_factory.py  searxng_service.py  slash_commands.py  task_manager.py
my-agent-core/tests/: test_agent_teams.py  test_creative_kb_search.py  test_error_recovery.py  test_feishu_integration.py  test_image_attachments.py  test_image_playground.py  test_model_providers.py  test_multi_view_product.py  test_permissions.py  test_plan_mode.py  test_prompt_store.py  test_sandbox.py  test_task_manager.py  test_task_system.py  test_users_quota.py  test_video_generation.py  test_web_tools.py  test_worktree_isolation.py
(+62 files in other folders)
