[project]
name = "my-agent-core"
version = "0.1.0"
description = "Backend-friendly generic agent runtime core"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.39.0"]
web = ["fastapi>=0.115.0", "uvicorn>=0.30.0", "pyyaml>=6.0", "python-multipart>=0.0.9", "filetype>=1.2.0", "openai>=1.0.0", "httpx>=0.28.0", "tos>=2.6", "lark-oapi>=1.4.0", "volcengine-python-sdk>=5.0.31", "volcengine>=1.0.223", "aiohttp>=3.13.0", "pillow>=10.0.0"]
search = [
    "certifi==2026.5.20",
    "babel==2.18.0",
    "flask==3.1.3",
    "flask-babel==4.0.0",
    "jinja2==3.1.6",
    "lxml==6.1.1",
    "pygments==2.20.0",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "httpx[http2]==0.28.1",
    "httpx-socks[asyncio]==0.10.0",
    "sniffio==1.3.1",
    "granian==2.7.5",
    "valkey==6.1.1",
    "markdown-it-py==4.2.0",
    "msgspec==0.21.1",
    "typer==0.26.3",
    "isodate==0.7.2",
    "whitenoise==6.12.0",
    "typing-extensions==4.15.0",
]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
